Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5143

default url shouldn't specify transport

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Client
    • None

    Description

      The default url if none is specified is amqp:tcp:127.0.0.1 (this is also the default for qpid-send and qpid-receive, though not for the drain and spout examples). However since the transport specified in the 0-10 format url overrides the connection option, this means that simply specifying e.g.

      {transport:ssl}

      as the connection options gets ignored and TCP is used.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: