QPID-5143: don't include transport in default url as it overrides any connection option

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1524506 13f79535-47bb-0310-9956-ffa450edef68