cpp/src/qpid/messaging/Connection.cpp
@@ -68,7 +68,7 @@ Connection::Connection(const std::string& url, const Variant::Map& options)
 Connection::Connection()
 {
     Variant::Map options;
-    std::string url = "amqp:tcp:127.0.0.1:5672";
+    std::string url = "127.0.0.1:5672";
     PI::ctor(*this, new qpid::client::amqp0_10::ConnectionImpl(url, options));
 }
 
