qpid/cpp/src/tests/qpid-receive.cpp
@@ -74,7 +74,7 @@ struct Options : public qpid::Options
     Options(const std::string& argv0=std::string())
         : qpid::Options("Options"),
           help(false),
-          url("amqp:tcp:127.0.0.1"),
+          url("127.0.0.1"),
           timeout(0),
           forever(false),
           messages(0),
